--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -74,11 +74,11 @@
             android:textAlignment="center"
             android:visibility="invisible"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvSearch"
+        <include
+            android:id="@+id/vpToys"
+            layout="@layout/viewpod_toys"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/margin_medium_3"
-            tools:listitem="@layout/viewholder_toy"/>
+            android:layout_marginTop="@dimen/margin_medium_3"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
