--- a/app/src/main/res/layout/viewpod_details.xml
+++ b/app/src/main/res/layout/viewpod_details.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.toyu.viewpods.DetailsViewpod
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.toyu.viewpods.DetailsViewpod xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:cardElevation="@dimen/margin_large"
     app:cardCornerRadius="@dimen/margin_large">
 
@@ -119,77 +119,19 @@
             android:layout_alignEnd="@id/btnFav"
             android:layout_marginTop="@dimen/margin_medium_3"/>
 
-        <LinearLayout
-            android:id="@+id/layoutColors"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvToyColors"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvAvaiColors"
-            android:orientation="horizontal">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/margin_medium_1"
-                android:layout_marginStart="@dimen/margin_medium_3"
-                android:layout_marginBottom="@dimen/margin_medium_3"
-                android:layout_marginEnd="@dimen/margin_medium_1"
-                android:layout_marginTop="@dimen/margin_medium">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="@dimen/margin_large"
-                    android:layout_height="@dimen/margin_large"
-                    android:background="@drawable/color_yellow" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/margin_medium_1"
-                android:layout_marginBottom="@dimen/margin_medium_3"
-                android:layout_marginEnd="@dimen/margin_medium_1"
-                android:layout_marginTop="@dimen/margin_medium">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="@dimen/margin_large"
-                    android:layout_height="@dimen/margin_large"
-                    android:background="@drawable/color_orange" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/margin_medium_1"
-                android:layout_marginBottom="@dimen/margin_medium_3"
-                android:layout_marginEnd="@dimen/margin_medium_1"
-                android:layout_marginTop="@dimen/margin_medium">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="@dimen/margin_large"
-                    android:layout_height="@dimen/margin_large"
-                    android:background="@drawable/color_violet" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/margin_medium_1"
-                android:layout_marginBottom="@dimen/margin_medium_3"
-                android:layout_marginEnd="@dimen/margin_medium_1"
-                android:layout_marginTop="@dimen/margin_medium">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="@dimen/margin_large"
-                    android:layout_height="@dimen/margin_large"
-                    android:background="@drawable/color_pink" />
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/margin_medium_3"/>
 
         <View
             android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_line"
-            android:layout_below="@id/layoutColors"
+            android:layout_below="@id/rvToyColors"
             android:layout_alignStart="@id/tvPrice"
             android:layout_alignEnd="@id/btnFav"
             android:layout_marginBottom="@dimen/margin_medium_3"
