--- a/app/src/main/res/layout/viewpod_empty.xml
+++ b/app/src/main/res/layout/viewpod_empty.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
+<com.example.toyu.viewpods.EmptyViewPod
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,4 +32,4 @@
         android:layout_marginBottom="@dimen/margin_xxlarge"/>
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</com.example.toyu.viewpods.EmptyViewPod>
